Adding code to detect straddlers and skip them. Used a bitmap to quickly store and lookup straddlers

--- a/instrumentors/finstrument/src/Makefile
+++ b/instrumentors/finstrument/src/Makefile
@@ -16,7 +16,7 @@ AR = ar
 RM = rm
 OPTS = 
 
-CODE = finstrumentor.cpp cyg_functions.cpp instrumentor.cpp noprof/no_prof_cyg_functions.cpp
+CODE = finstrumentor.cpp cyg_functions.cpp instrumentor.cpp noprof/no_prof_cyg_functions.cpp bitmap.cpp
 OBJ0 = $(CODE:.cpp=.o)
 OBJ  = $(OBJ0:.c=.o)
 
