--- a/instrumentors/finstrument/src/Makefile_GCC
+++ b/instrumentors/finstrument/src/Makefile_GCC
@@ -1,7 +1,12 @@
 
 # CFLAGS=-DPROBE_TRUE_EMPTY_ON -DPROBE_CPU_TIME
 # CFLAGS=-DPROBE_HIST_ON -DPROBE_CPU_TIME
-ARGS= -g -Wall
+
+EXTRA_WARNS=
+#-Wextra 
+## -Wformat-nonliteral -Wcast-align -Wpointer-arith -Wbad-function-cast -Wmissing-prototypes -Wstrict-prototypes -Wmissing-declarations -Winline -Wundef -Wnested-externs -Wcast-qual -Wshadow -Wwrite-strings -Wno-unused-parameter -Wfloat-equal
+
+ARGS= -g -Wall -pedantic $(EXTRA_WARNS)
 LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
 
 # COMP = icc
