--- a/profilers/src/Makefile_GCC
+++ b/profilers/src/Makefile_GCC
@@ -1,7 +1,14 @@
 
 # CFLAGS += -DOVERHEAD_TIME_SERIES 
 # CFLAGS += -DNO_INIT 
-ARGS= -g -Wall -fpermissive
+
+EXTRA_WARNS= 
+##-Wextra 
+## -Wformat-nonliteral -Wcast-align -Wpointer-arith -Wbad-function-cast -Wmissing-prototypes -Wstrict-prototypes -Wmissing-declarations -Winline -Wundef -Wnested-externs -Wcast-qual -Wshadow -Wwrite-strings -Wno-unused-parameter -Wfloat-equal
+
+#Not being -fpermissive anymore 
+
+ARGS= -g -Wall -pedantic $(EXTRA_WARNS) 
 LIBS = -lpthread
 LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
 
@@ -65,7 +72,8 @@ all: build
 build: $(OBJ) 
 
 install:
-	-rm -r $(INSTALL)
+	# something awkward here!  (should be part of clean?)
+	rm -r $(INSTALL)
 	mkdir $(INSTALL)
 	mkdir $(INSTALL)/noprof
 	make libubiprof.so -f Makefile_GCC
