--- a/tests/Makefile
+++ b/tests/Makefile
@@ -18,4 +18,4 @@ run:
 	LD_LIBRARY_PATH=$(UBIPATH):$(LD_LIBRARY_PATH) ./finstrumentor_test.exe
 
 clean:
-	rm -f *.o *.exe functions.txt
+	rm -f *.o *.exe functions.txt core
