tweaks to finstrument_test makefile

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,18 +1,29 @@
 
-CC = icpc -std=c++11
+# COMPILE INSTRUCTIONS 
+# -------------------- 
+# CXX=icpc make
+# or 
+# CXX=g++ make 
+# or 
+# make 
+#  which uses default setting of CXX (most likely g++) 
 
-CFLAGS=-g -finstrument-functions -fno-optimize-sibling-calls
+EXTRA_CFLAGS=-std=c++11
+
+CFLAGS=$(EXTRA_CFLAGS) -g -finstrument-functions -fno-optimize-sibling-calls
 
 UBIPATH = ../build
-LIBS = -L$(UBIPATH) -lubiprof
+LIBS_g++  = -L$(UBIPATH) -lubiprof -lpthread -ldl 
+LIBS_icpc = -L$(UBIPATH) -lubiprof -lpthread
 
+LIBS=${LIBS_${CXX}}
 test: build run
 
 build: finstrumentor_test.exe
 
 finstrumentor_test.exe: finstrumentor_test.cpp
-	$(CC) $(OPTS) $(LIBS) $(CFLAGS) finstrumentor_test.cpp -o finstrumentor_test.exe
-	readelf -s finstrumentor_test.exe |grep FUNC | awk -F '[[:space:]]+' '{print $$3 "," $$9}' > functions.txt
+	$(CXX) $(OPTS) $(CFLAGS) finstrumentor_test.cpp -o finstrumentor_test.exe $(LIBS)
+	readelf -s finstrumentor_test.exe | grep FUNC | awk -F '[[:space:]]+' '{print $$3 "," $$9}' > functions.txt
 
 run:
 	LD_LIBRARY_PATH=$(UBIPATH):$(LD_LIBRARY_PATH) ./finstrumentor_test.exe
