--- a/instrumentors/finstrument/src/Makefile_GCC
+++ b/instrumentors/finstrument/src/Makefile_GCC
@@ -15,7 +15,7 @@ LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
 #CPP = cpp 
 COMP = gcc
 CC = gcc $(ARGS)
-CPP = g++ -std=c++0x $(ARGS)
+CPP = g++ -std=c++11 $(ARGS)
 
 AR = ar
 RM = rm
