--- a/profilers/src/Makefile_GCC
+++ b/profilers/src/Makefile_GCC
@@ -18,7 +18,8 @@ LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
 CCC = gcc
 COMP = gcc
 CC = gcc $(ARGS)
-CPP = g++ -std=c++0x $(ARGS)
+# Should be CXX
+CPP = g++ -std=c++11 $(ARGS)
 
 AR = ar
 RM = rm
