--- a/deps/CodePatcher/src/patcher/Makefile
+++ b/deps/CodePatcher/src/patcher/Makefile
@@ -1,11 +1,11 @@
 
-# TODO: 
+# TODO: Rewrite completely when more done 
 
 all: test
 
 # just an example 
 test: test.c patcher.c 
-	gcc -std=gnu99 -o test patcher.c test.c
+	gcc -std=gnu99 -pedantic -Wall -o test patcher.c test.c ../../../distorm/distorm3.a
 
 
 run: test 
