Change the dyninst example so that it uses fork and the parent monitors the child

--- a/dyninst/Makefile
+++ b/dyninst/Makefile
@@ -27,3 +27,7 @@ run:
 
 ryan:
 	 CPLUS_INCLUDE_PATH=$(HOME)/opt/dyninst/include LIBRARY_PATH=$(HOME)/opt/dyninst/lib $(MAKE)
+
+
+clean:
+	rm -f *.o *.exe
