updates and a failing test!

--- a/deps/CodePatcher/src/patcher/tests/Makefile
+++ b/deps/CodePatcher/src/patcher/tests/Makefile
@@ -5,12 +5,13 @@ SRCS = $(wildcard *.c)
 EXES = $(patsubst %.c,%.exe,$(SRCS))
 
 DEPS = ../../../../../deps/distorm/distorm3.a -lpthread
+ 
 
 all: $(EXES)
 
 %.exe: %.c
 
-	gcc --std=gnu99 -g -I../ ../patcher.c $< -o $@ $(DEPS) 
+	gcc --std=gnu99 -g $(CFLAGS) -I../ ../patcher.c $< -o $@ $(DEPS) 
 
 
 test: $(EXES)
