--- a/libfastinst/tests/Makefile
+++ b/libfastinst/tests/Makefile
@@ -4,17 +4,17 @@ SRCS = $(wildcard *.cpp)
 
 EXES = $(patsubst %.cpp,%.exe,$(SRCS))
 
-DEPS = -L../../build -lfastinst
+LIBS = -L../../build/lib -lfastinst
  
 all: $(EXES)
 
 %.exe: %.cpp
 
-	icpc --std=c++11 -g $(CFLAGS) -I../../include $< -o $@ $(DEPS) 
+	icpc --std=c++11 -g $(CFLAGS) -I../../include $< -o $@ $(LIBS) 
 
 
 test: $(EXES)
 	./testall.sh
 
 clean: 
-	rm *.exe
+	rm *.o *.exe
