Makefile bugfix to avoid spurious error exit codes

--- a/libfastinst/tests/Makefile
+++ b/libfastinst/tests/Makefile
@@ -5,18 +5,18 @@ SRCS = $(wildcard *.cpp)
 EXES = $(patsubst %.cpp,%.exe,$(SRCS))
 
 LIBS = -L../../build/lib -lfastinst -lpointpatch -ldl
- 
+
 CXX=icpc
 
 all: $(EXES)
 
 %.exe: %.cpp
 
-	$(CXX) --std=c++11 -g $(CFLAGS) -I../../include $< -o $@ $(LIBS) 
+	$(CXX) --std=c++11 -g $(CFLAGS) -I../../include $< -o $@ $(LIBS)
 
 
 test: $(EXES)
 	./testall.sh
 
-clean: 
-	rm *.o *.exe
+clean:
+	rm -f *.o *.exe
