Changed the distorm makefile, changed the libpointpatch makefile, increased test intensity

--- a/deps/distorm/make/linux/Makefile
+++ b/deps/distorm/make/linux/Makefile
@@ -5,7 +5,7 @@
 TARGET	= libdistorm3.so
 COBJS	= ../../src/mnemonics.o ../../src/wstring.o ../../src/textdefs.o ../../src/prefix.o ../../src/operands.o ../../src/insts.o ../../src/instructions.o ../../src/distorm.o ../../src/decoder.o
 CC	= gcc
-CFLAGS	= -fPIC -O2 -Wall -DSUPPORT_64BIT_OFFSET -DDISTORM_STATIC
+FLAGS	= -fPIC -O2 -Wall -DSUPPORT_64BIT_OFFSET -DDISTORM_STATIC
 
 all: clib
 
@@ -13,7 +13,7 @@ clean:
 	/bin/rm -rf ../../src/*.o ${TARGET} ../../distorm3.a ./../*.o
 
 clib: ${COBJS}
-	${CC} ${CFLAGS} ${VERSION} ${COBJS} -shared -o ${TARGET}
+	${CC} ${FLAGS} ${VERSION} ${COBJS} -shared -o ${TARGET}
 	ar rs ../../distorm3.a ${COBJS}
 
 install: libdistorm3.so
@@ -21,5 +21,5 @@ install: libdistorm3.so
 	@echo "... running ldconfig might be smart ..."
 
 .c.o:
-	${CC} ${CFLAGS} ${VERSION} -c $< -o $@
+	${CC} ${FLAGS} ${VERSION} -c $< -o $@
 
