--- a/libfastinst/tests/Makefile
+++ b/libfastinst/tests/Makefile
@@ -4,6 +4,8 @@ SRCS = $(wildcard *.cpp)
 
 EXES = $(patsubst %.cpp,%.exe,$(SRCS))
 
+CFLAGS = -finstrument-functions -fno-inline -fno-optimize-sibling-calls
+
 LIBS = -L../../build/lib -lfastinst -lpointpatch -ldl
 
 CXX=icpc
@@ -16,7 +18,7 @@ all: $(EXES)
 
 
 test: $(EXES)
-	./testall.sh
+	LD_LIBRARY_PATH=../../build/lib:$(LD_LIBRARY_PATH) ./test_probe_activation.exe
 
 clean:
 	rm -f *.o *.exe
