Adding straddler audit logs

--- a/libfastinst/src/Makefile
+++ b/libfastinst/src/Makefile
@@ -3,6 +3,7 @@ ROOT = ../..
 INSTALL= $(ROOT)/build/lib
 # CFLAGS=-DPROBE_TRUE_EMPTY_ON -DPROBE_CPU_TIME
 # CFLAGS=-DPROBE_HIST_ON -DPROBE_CPU_TIME
+override CFLAGS += -DAUDIT_PROBES
 
 EXTRA_WARNS= -pedantic 
 #-Wextra
