WIP: stringing the pipe between the dyninst parent/child processes

--- a/instrumentors/dyninst/Makefile
+++ b/instrumentors/dyninst/Makefile
@@ -1,6 +1,13 @@
 
 # Dummy, temporary makefile.
 
+
+DOCKER_NAME = dyninst_test
+# [2015.09.21] Not working on my mac laptop:
+# DOCKER_OPTS = --cap-add SYS_PTRACE --security-opt apparmor:unconfined
+# Another workaround for ptrace/docker issues is running this:
+#    sudo aa-complain /etc/apparmor.d/docker
+
 DYNINST_ROOT    = $(HOME)/opt/dyninst
 DYNINST_LIB     = $(DYNINST_ROOT)/lib
 DYNINST_INCLUDE = $(DYNINST_ROOT)/include
@@ -27,14 +34,14 @@ ryan:
 	 CPLUS_INCLUDE_PATH=$(HOME)/opt/dyninst/include LIBRARY_PATH=$(HOME)/opt/dyninst/lib $(MAKE)
 
 docker:
-	docker build -t dyninst_test .
+	docker build $(DOCKER_OPTS) -t $(DOCKER_NAME) .
 
 rundock:
-	docker run -it dyninst_test
+	docker run $(DOCKER_OPTS) -it $(DOCKER_NAME)
 
 
 test:
-	docker run -it dyninst_test bash -c 'cd ubiprof_src/instrumentors/dyninst/'
+	docker run $(DOCKER_OPTS) -it $(DOCKER_NAME) bash -c 'cd ubiprof_src/instrumentors/dyninst/'
 
 clean:
 	rm -f *.o *.exe
