New patch cost dir

--- a/libpointpatch/microbenchmarks/patch_costs/Makefile
+++ b/libpointpatch/microbenchmarks/patch_costs/Makefile
@@ -7,7 +7,7 @@ SRCS = $(wildcard *.c)
 EXES = $(patsubst %.c,%.exe,$(SRCS))
 
 # hardcoded ??
-UBIROOT=../..
+UBIROOT=../../..
 
 LIBDIR=$(UBIROOT)/build/lib
 
@@ -24,7 +24,7 @@ DEPS =  $(UBIROOT)/deps/distorm/distorm3.a $(LIBDIR)/libpointpatch.a -lpthread
 all: $(EXES) 
 
 %.exe: %.c
-	$(CC)  -std=gnu99 -g $(CFLAGS) -I../../deps/distorm/include -I../../include -I../../common/include  $< -o $@ -L$(LIBDIR) $(DEPS) 
+	$(CC) -std=gnu99 -g $(CFLAGS) -I$(UBIROOT)/deps/distorm/include -I$(UBIROOT)/include -I$(UBIROOT)/common/include  $< -o $@ -L$(LIBDIR) $(DEPS) 
 
 
 run: $(EXES)
