set wait_iters with env var PATCH_WAIT_TIME

--- a/libpointpatch/microbenchmarks/wait_time_rdtsc/Makefile
+++ b/libpointpatch/microbenchmarks/wait_time_rdtsc/Makefile
@@ -1,7 +1,7 @@
 
 
 installLib: 
-	(cd ../../src && make install CC=$(CC) CXX=$(CXX) CFLAGS="$(CFLAGS) -DWAIT_SPIN_RDTSC")  
+	(cd ../../src && make install CC=$(CC) CXX=$(CXX) CFLAGS="-DWAIT_SPIN_RDTSC")  
 
 cleanLib: 
 	(cd ../../src && make clean)
